# DCT-2-CUDA

./: .gitignore  smem_info  smem_info.cu
Bikes/: error_bikes.txt
Danger/: error_danger.txt
Fountain/: error_fountain.txt
Stone/: error_stone.txt
src/: CMakeLists.txt  LightFieldLoader.cpp  LightFieldLoader.hpp  apply_dct1d.cu  apply_dct1d.hpp  apply_dct1d_7x7x8x8.cu  apply_dct1d_7x7x8x8.hpp  apply_dct1d_7x7x8x8_SMEM.cu  apply_dct1d_7x7x8x8_SMEM.hpp  lightfield_loader  main.cpp  script.m
src/.cache/clangd/index/: LightFieldLoader.cpp.389CA0531926EADB.idx  LightFieldLoader.hpp.9C4C7F8C1FDC10FF.idx  apply_dct1d.cu.2FFBB7C096252EEB.idx  apply_dct1d.hpp.D893BDC41EA7ADC4.idx  main.cpp.9606B8B41835E7C1.idx
